docs/apim/4.7x/configure-and-manage-the-platform/manage-organizations-and-environments/support.md
# Support

## Overview

Gravitee encourages you to engage with our support team if you experience issues with APIM. Messages can be sent and checked via either the Management Console or the Developer Portal.

## Send a message to Support

{% tabs %}
{% tab title="Using APIM Console" %}
1.  Click the user icon on the right of the Management Console header, then click **Support**&#x20;

    <figure><img src="../../.gitbook/assets/support_console menu.png" alt=""><figcaption></figcaption></figure>
2.  Use the drop-down menus and text fields to enter the ticket details

    <figure><img src="../../.gitbook/assets/support_console ticket.png" alt=""><figcaption></figcaption></figure>
3. Choose whether to receive a copy of the email, then click **CREATE**
{% endtab %}

{% tab title="Using the Developer Portal" %}
You can send a message from either the [user menu](support.md#from-the-user-menu) or the [API menu](support.md#from-the-api-menu).

### **From the user menu**

1.  Click the user name on the right of the Developer Portal header, then click **Contact**&#x20;

    <figure><img src="../../.gitbook/assets/support_portal menu (1).png" alt=""><figcaption></figcaption></figure>
2.  Use the drop-down menus and text fields to enter the ticket details&#x20;

    <figure><img src="../../.gitbook/assets/support_portal ticket.png" alt=""><figcaption></figcaption></figure>
3. Choose whether to receive a copy of the email, then click **SEND YOUR REQUEST**

### **From the API menu**

You can send a message to the support team from the current API.

1.  From the API header menu, click the **Contact** tab&#x20;

    <figure><img src="../../.gitbook/assets/support_api menu (1).png" alt=""><figcaption></figcaption></figure>
2.  Use the drop-down menu and text fields to enter the ticket details

    <figure><img src="../../.gitbook/assets/support_api ticket.png" alt=""><figcaption></figcaption></figure>
3. Choose whether to receive a copy of the email, then click **SEND YOUR REQUEST**
{% endtab %}
{% endtabs %}

## Check your messages

{% tabs %}
{% tab title="Using APIM Console" %}
1.  Click the user icon on the right of the Management Console header, then click **Support**&#x20;

    <figure><img src="../../.gitbook/assets/support_console menu.png" alt=""><figcaption></figcaption></figure>
2.  From the ticket creation page, click **See ticket history**&#x20;

    <figure><img src="../../.gitbook/assets/see tix history.png" alt=""><figcaption></figcaption></figure>
3.  Any tickets you have created will appear as entries in the list. To view the details of a ticket, click the eye icon.

    <figure><img src="../../.gitbook/assets/back to tix history.png" alt=""><figcaption></figcaption></figure>
{% endtab %}

{% tab title="Using the Developer Portal" %}
You can send a message from either the [user menu](support.md#from-the-user-menu-1) or the [API menu](support.md#from-the-api-menu-1).

### From the user menu

1.  Click the user name on the right of the Developer Portal header, then click **Tickets**&#x20;

    <figure><img src="../../.gitbook/assets/support_tix in portal (1).png" alt=""><figcaption></figcaption></figure>
2. Click a ticket entry in the list to view the ticket details and any messages

### From the API menu

You can view your tickets from the current API.

1.  From the API header menu, click the **Tickets** tab&#x20;

    <figure><img src="../../.gitbook/assets/support_tix from api.png" alt=""><figcaption></figcaption></figure>
2. Click a ticket entry in the list to view the ticket details and any messages
{% endtab %}
{% endtabs %}
